tests/error/null_array_access_multi.gw
#! [contains] NullPtrException
int i[][];
i[0][0];
